# corgie-board

./: Cargo.toml  README.md  build.rs  justfile
.cargo/: config.toml
src/: layout.rs  main.rs
