[package]
name = "corgie-board"
version = "0.1.0"
edition = "2021"

[dependencies]
keyberon = { git = "https://github.com/TeXitoi/keyberon" }
embassy-futures = "0.1.1"
embassy-sync = { version = "0.6.1", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.2.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
embassy-usb = { version = "0.3.0", features = ["defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"

defmt = "0.3"
defmt-rtt = "0.4"

panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-storage = "0.3.1"
embedded-hal = { version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-hal-bus = { version = "0.1", features = ["async"] }

usbd-hid = "0.8.2"

[profile.release]
opt-level = "s"
codegen-units = 1
debug = true
lto = true
